// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareCount snapshots It should format long shareCount correctly 1`] = `
.emotion-5 {
  font-size: 18px;
  line-height: 18px;
  font-family: GuardianTextSans,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-weight: bold;
  color: #767676;
}

@media (min-width:1140px) {
  .emotion-5 {
    border-top: 1px solid #dcdcdc;
    width: 100%;
    padding-top: 6px;
  }
}

@media (min-width:1300px) {
  .emotion-5 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    border: 0;
    padding-top: 0;
    text-align: right;
  }
}

@media (min-width:1140px) {
  .emotion-4 {
    display: inline-block;
  }
}

.emotion-1 {
  position: relative;
  height: 15px;
  margin: 0;
}

.emotion-2 {
  display: block;
}

@media (min-width:1140px) and (max-width:1299px) {
  .emotion-2 {
    display: none;
  }
}

.emotion-3 {
  display: none;
}

@media (min-width:1140px) and (max-width:1299px) {
  .emotion-3 {
    display: block;
  }
}

.emotion-0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border: 0;
}

<div
  class="emotion-5"
>
  <div
    class="emotion-4"
  >
    <h3
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        Shares
      </span>
    </h3>
    <div
      class="emotion-2"
      data-testid="countFull"
    >
      25,000
    </div>
    <div
      class="emotion-3"
      data-testid="countShort"
    >
      25k
    </div>
  </div>
</div>
`;

exports[`ShareCount snapshots It should not render if state.shareCount is falsy 1`] = `null`;

exports[`ShareCount snapshots It should render if state.shareCount is truthy 1`] = `
.emotion-5 {
  font-size: 18px;
  line-height: 18px;
  font-family: GuardianTextSans,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
  font-weight: bold;
  color: #767676;
}

@media (min-width:1140px) {
  .emotion-5 {
    border-top: 1px solid #dcdcdc;
    width: 100%;
    padding-top: 6px;
  }
}

@media (min-width:1300px) {
  .emotion-5 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    border: 0;
    padding-top: 0;
    text-align: right;
  }
}

@media (min-width:1140px) {
  .emotion-4 {
    display: inline-block;
  }
}

.emotion-1 {
  position: relative;
  height: 15px;
  margin: 0;
}

.emotion-2 {
  display: block;
}

@media (min-width:1140px) and (max-width:1299px) {
  .emotion-2 {
    display: none;
  }
}

.emotion-3 {
  display: none;
}

@media (min-width:1140px) and (max-width:1299px) {
  .emotion-3 {
    display: block;
  }
}

.emotion-0 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border: 0;
}

<div
  class="emotion-5"
>
  <div
    class="emotion-4"
  >
    <h3
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        Shares
      </span>
    </h3>
    <div
      class="emotion-2"
      data-testid="countFull"
    >
      100
    </div>
    <div
      class="emotion-3"
      data-testid="countShort"
    >
      100
    </div>
  </div>
</div>
`;
